syntax = "proto3";

package gostarter.api.todo;

import "buf/validate/validate.proto";

enum Status {
    STATUS_UNSPECIFIED = 0;
    STATUS_INITIATE = 1;
    STATUS_IN_PROGRESS = 2;
    STATUS_DROP = 3;
    STATUS_DONE = 4;
}

message Todo {
    uint64 id = 1;
    uint64 user_id = 2;
    string title = 3;
    string description = 4;
    Status status = 5;
}

message Pagination {
    string next_cursor = 1;
    bool has_more = 2;
}

message CreateRequest { 
    string title = 1 [(buf.validate.field).string.min_len = 5];
    string description = 2 [(buf.validate.field).string.min_len = 5];
}

message CreateResponse {
    uint64 id = 1;
}

message DeleteRequest { 
    uint64 id = 1;
}

message DeleteResponse { 
    uint64 id = 1;
}

message FindRequest { 
    uint64 id = 1;
}

message FindResponse { 
    uint64 id = 1;
    uint64 user_id = 2;
    string title = 3;
    string description = 4;
    Status status = 5;
}

message FetchRequest { 
    string cursor = 1;
    string limit = 2;
    Status status = 3;
}

message FetchResponse { 
    repeated Todo todos = 1;
    Pagination pagination = 2;
}

message UpdateStatusRequest { 
    uint64 id = 1;
    Status status = 2;
}

message UpdateStatusResponse { 
    uint64 id = 1;
    Status status = 2;
}

message UpdateRequest { 
    uint64 id = 1;
    string title = 2;
    string description = 3;
    Status status = 4;
}

message UpdateResponse { 
    uint64 id = 1;
    uint64 user_id = 2;
    string title = 3;
    string description = 4;
    Status status = 5;
}

service TodoService {
    rpc Create (CreateRequest) returns (CreateResponse);
    rpc Delete (DeleteRequest) returns (DeleteResponse);
    rpc Find (FindRequest) returns (FindResponse);
    rpc Fetch (FetchRequest) returns (FetchResponse);
    rpc UpdateStatus (UpdateStatusRequest) returns (UpdateStatusResponse);
    rpc Update (UpdateRequest) returns (UpdateResponse);
}
